--- a/config/database.yml
+++ b/config/database.yml
@@ -54,3 +54,7 @@ production:
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
 
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  
